--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -6,7 +6,7 @@
   top: 0;
   z-index: 2;
   width: 100%;
-  opacity: .98;
+  opacity: .9;
   color: white;
   position: fixed;
   box-shadow: 0 0 8px 6px black;
@@ -36,12 +36,12 @@
 
 .navbar-brand {
   color: white;
-  font-size: 30px;
+  font-size: 40px;
   font-family: serif;
   text-shadow: 0px 10px 5px black;
 }
 
-.navbar-brand:hover {
+.navbar-brand:hover, .navLinks:hover {
   color: white;
   text-shadow: 2px 0px 10px darkgray;
 }
