--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -9,7 +9,7 @@
   opacity: .9;
   color: white;
   position: fixed;
-  box-shadow: 0 0 8px 6px black;
+  background: black;
 }
 
 .navRow {
@@ -71,7 +71,7 @@
 
 .searchItem {
   width: 280px;
-  cursor: default;
+  cursor: pointer;
 }
 
 .searchItem > * {
@@ -90,11 +90,12 @@
 .search-input:focus {
   width: 200px;
   visibility: visible;
+  border: 2px solid aqua;
 }
 
 .search-input {
   width: 0px;
-  margin-right: 5px;
+    margin-right: 5px;
   border-radius: 8px;
   visibility: hidden;
   transition: all .5s ease-in-out;
