--- a/src/components/background/Background.css
+++ b/src/components/background/Background.css
@@ -1,5 +1,5 @@
 .parallaxBackground {
-  background: url("https://images.unsplash.com/photo-1445205170230-053b83016050?ixlib=rb-1.2.1&auto=format&fit=crop&w=5399&q=80"), gray;
+  background: url("https://images.unsplash.com/photo-1445205170230-053b83016050?ixlib=rb-1.2.1&auto=format&fit=crop&w=5399&q=80");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
